<resources>
    <string name="app_name">Logophile</string>
    <string name="dashboard">Dashboard</string>
    <string name="list">List</string>
    <string name="practice">Practice</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="practice_fragment">Practice Fragment</string>
    <string name="list_fragment">List Fragment</string>
    <string name="dashboard_fragment">Dashboard Fragment</string>
    <string name="word">Word</string>
    <string name="oxford_dictionary">Oxford Dictionary</string>
    <string name="merriam_webster_dictionary">Merriam-Webster Dictionary</string>
    <string name="your_own_definition">Your own definition</string>
    <string name="definition_optional">Definition (optional)</string>
</resources>