<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Activity.Identification.SignupActivity">

    <LinearLayout
        android:layout_marginBottom="@dimen/_22sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:text="Create a new account"
            android:textSize="@dimen/_20sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="@dimen/_260sdp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/SignupEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/SignupPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:hint="@string/confirm_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/SignupconfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:paddingLeft="@dimen/_25sdp"
            android:paddingRight="@dimen/_25sdp"
            android:text="SIGN UP"
            app:backgroundTint="@color/primaryColor" />

    </LinearLayout>


</LinearLayout>