<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/practice_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_35sdp"
        android:text="Word"
        android:layout_marginBottom="@dimen/_28sdp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Familiarity Level: " />

        <TextView
            android:id="@+id/value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"/>

    </LinearLayout>


    <SeekBar
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:id="@+id/seek_bar"
        android:max="20"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_20sdp" />

    <LinearLayout
        android:id="@+id/definition_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_own_definition" />
        <EditText
            android:id="@+id/own_definition"
            android:scrollbars="vertical"
            android:gravity="top|left"
            android:textSize="@dimen/_14sdp"
            android:layout_width="@dimen/_270sdp"
            android:layout_height="@dimen/_70sdp"
            android:background="@drawable/definition_border"
            android:layout_marginBottom="@dimen/_10sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oxford_dictionary" />
        <TextView
            android:id="@+id/oxford_definition"
            android:scrollbars="vertical"
            android:background="@drawable/definition_border"
            android:textSize="@dimen/_14sdp"
            android:layout_width="@dimen/_270sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_height="@dimen/_70sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/merriam_webster_dictionary" />
        <TextView
            android:id="@+id/merriam_webster_definition"
            android:scrollbars="vertical"
            android:layout_width="@dimen/_270sdp"
            android:layout_height="@dimen/_70sdp"
            android:textSize="@dimen/_14sdp"
            android:background="@drawable/definition_border"
            android:layout_marginBottom="@dimen/_10sdp" />

    </LinearLayout>

    <Button
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edit" />

    <LinearLayout
        android:id="@+id/edit_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/delete_button"
            android:layout_marginRight="@dimen/_7sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save" />

    </LinearLayout>

</LinearLayout>